--- a/papers/GdMn2O5/GdMn2O5.tex
+++ b/papers/GdMn2O5/GdMn2O5.tex
@@ -65,7 +65,7 @@ To keep the discussion tractable and in line with the experiments that were perf
 $R$Mn$_2$O$_5$ have crystallographic group P$bam$ \cite{Alonso97} in the paramagnetic phase at high temperature, which is eventually lowered to the crystallographic space group P$_ab2_1a$ when the commensurate magnetic order condenses below $T_{N} \approx 33$ K.
 This order is characterised by the propagation vector $\bm{k} = (1/2, 0, 0)$, i.e. there is a unit cell doubling along the crystalline $a$-direction.
 The magnetic configuration repeats along the crystalline $c$-direction. This magnetic transition goes hand in hand with a sharp anomaly in the dielectric constant $\varepsilon_b$, signalling the onset of the improper ferroelectric polarization  along the $b$-direction ($P_b$) \cite{Lee13}.
-When the temperature is lowered further, the polarization $P_b$ saturates to a maximum value of around 3600 $\mu$C/m$^2$, which is the largest of all rare-earth magnanites, but still tiny compared to proper ferroelectrics like BaTiO$_3$ with $P \approx 2 \times 10^5 \mu $C/m$^2$.
+When the temperature is lowered further, the polarization $P_b$ saturates to a maximum value of around 3600 $\mu$C/m$^2$, which is the largest of all rare-earth magnanites, but still tiny compared to proper ferroelectrics like BaTiO$_3$ with $P \approx 1.5 \times 10^5 \mu $C/m$^2$ at room temperature \cite{Mason1948,VonHippel1950}.
 The magnetic configuration features two antiferromagnetic (AFM) Mn chains per unit cell, which are formed by pyramidally coordinated Mn$^{3+}$ and octahedrally coordinated Mn$^{4+}$ ions, as indicated by the light blue lines and purple polygons in Fig.~\ref{fig:GdMn2O5_unit_cell}. The Mn spins inside the chains lie mostly along the fourfold symmetry axis of the Mn$^{3+}$ pyramids, making angles of $\pm 23.4^\circ$ with the $a$-axis.
 
 The improper ferroelectricity is generated through the symmetric Heisenberg exchange striction, combined with the geometric frustration and strong antiferromagnetic exchanges~\cite{Choi2008}.
@@ -413,8 +413,8 @@ The influence of varying a single model parameter at a time is demonstrated in F
 One can also observe that the influence of some parameters is higher than others. For instance, taking $v_1=0.7$ dramatically increases the width of the four-state switching region to the interval of [5.2$^\circ$, 17.6$^\circ$]. However, even at very high values the four-state switching is maintained.
 A small variation to $K_L$, the strength of the Mn anisotropy, on the other hand, leads to a big change to the characteristics of the topologically protected region.
 This is not surprising, since the behavior of the Mn chains is very similar to that of the usual spin-flop transition, which crucially depends on the easy-axis anisotropy.
-\begin{figure}[b!]
-	\IncludeGraphics{winding_modelparam.png}
+\begin{figure}[h!]
+	\IncludeGraphics[width=0.90\linewidth]{winding_modelparam.png}
 	\caption{\label{fig:GdMn2O5_windingvsmodelparam} {\bf Magic Angle region.} The panels demonstrate the influence of selected model parameters on the magic angle region. In each panel only the parameter labeled on the vertical axis is varied, whereas the others are kept at the values reported in the text of this section, and used for Fig.~\ref{fig:theory1} of the main text. All parameters are reported in units of meV. The blue regions signify the low angle switching regime, while the red denotes the high angle switching regime. The white boundary region is where the double loop switching regime occurs, characterized by a winding number of 1, and is topologically protected by the neighboring regimes.}
 \end{figure}
 
