--- a/papers/Introduction/Introduction.tex
+++ b/papers/Introduction/Introduction.tex
@@ -1,5 +1,7 @@
 \chapter{Introduction}
-Theoretical condensed matter research is plagued by a fundamental issue of complexity. The sheer amount of degrees of freedom in a material of any technologically relevant scale is overwhelming (e.g. $\sim10^{23}$ electrons per cm$^3$), and make it impossible to describe the quantum mechanical wavefunction exactly \lp{there is some more nice things along this line in Wen}. This forces researchers in the field to make approximations, as to make the problem tractable, while still capturing the essential physics resulting in the effects under investigation.
+Theoretical condensed matter research is plagued by a fundamental issue of complexity. The sheer amount of degrees of freedom in a material of any technologically relevant scale is overwhelming (e.g. $\sim10^{23}$ electrons per cm$^3$), and make it impossible to describe the quantum mechanical wavefunction exactly.
+%\lp{there is some more nice things along this line in Wen}.
+%This forces researchers in the field to make approximations, as to make the problem tractable, while still capturing the essential physics resulting in the effects under investigation.
 The way to make progress with this undertaking has always been to try and isolate the parts of the system that play the biggest role in the effects under investigation, while neglecting those that only lead to more complexity.
 
 As is well known, every quantum mechanical system is governed fundamentally by its Hamiltonian. One could go so far as to say that if we would be able to exactly calculate all of the eigenvectors and eigenvalues of the Hamiltonian describing the material under study, the field of condensed matter would be completed. This is ofcourse impossible for reasons stated before.
@@ -19,7 +21,7 @@ The three main interactions that will be discussed are: relativistic spin-orbit 
 
 Aside from the fundamental interest, technological development has always been a strong driving force in condensed matter research. Here too, the focus on interactions between subsystems can lead to beneficial discoveries, since it theoretically allows to influence one subsystem by applying a perturbation to the other.
 This can allow for more efficient or granular manipulation of, for example, magnetic order through applied currents or electric fields.
-Many success stories in this area led to leaps in technology, like the dramatic increase in density and efficiency of hard disks allowed for by the discovery of giant magnetoresistance \lp{citation}.
+Many success stories in this area led to leaps in technology, like the dramatic increase in density and efficiency of hard disks allowed for by the discovery of giant magnetoresistance Fert.
 However, exactly due to the fact that in most cases these interactions can be neglected, it is often not easy to find materials where they are big enough to be effictively exploited for technological applications.
 It is therefore crucial to gain an intimate understanding what physics are at the base of these effects, in order to then try and optimize them.
 Here a selection of materials will be discussed in which the earlier mentioned interactions are larger, or behave in an unexpected fashion, in order to accomplish this deep understanding.
@@ -31,7 +33,7 @@ This spin-splitting is usually attributed to the Rashba-Bychkov effect, which is
 However, as will be demonstrated in Chapter~\ref{ch:Rashba}, another effect must lie at the origin in order to explain the properties of the observed spin-splitting.
 We will show that it is rather the combination of atomic SOC and the interaction of the orbital angular momentum of Bloch functions with the electric polarization, that causes the effect.
 From a technological standpoint, this large spin-splitting, which is dependent on the orientation of the electric polarization, can be used to not only generate spin-polarized currents, but also change sign of this spin-polarization by reversing the electric polarization using an external electric field.
-This can theoretically be exploited in a device first dreamt up by Datta and Das \lp{Datta1990}, i.e. a spin based field-effect transistor.
+This can theoretically be exploited in a device first dreamt up by Datta and Das \cite{Datta1990}, i.e. a spin based field-effect transistor.
 
 In Chapter ~\ref{ch:CrSDW} the focus will be shifted to the aspect of increased granularity of control over a lattice vibration through the excitation of a coupled spin density wave (SDW) in elemental Chromium.
 In this material a peculiar nesting of the fermi-surface results in the stabilization of the SDW, which in turn will optimize bondlengths between antiferromagnetically coupled ions to maximize the gained magnetic exchange energy.
@@ -39,7 +41,8 @@ In essence, this leads to a shortening of bonds between ions with large spins, a
 As will be shown, by exciting the electronic subsystem that constitutes the SDW, the phonon associated with the PLD starts to oscillate due to diminished magnitude of the SDW.
 The electronic subsystem will then cool down partly restoring the SDW, while the phonon oscillation largely remains present due to the slow dynamics and low damping.
 By applying a sequence of excitations to the SDW, one can then achieve indirect, but incredibly granular control over the amplitude of the phonon mode.
-Moreover, this process allows for achieving excitation amplitudes that would not be possible if the phonon mode would be excited directly.\lp{maybe this is not true?}
+Moreover, this process allows for achieving excitation amplitudes that would not be possible if the phonon mode would be excited directly.
+%\lp{maybe this is not true?}
 The very fast (essentially instantaneous) dynamics of the SDW, and relatively strong coupling to the phonon mode with much slower dynamics, lies at the core of this behavior.
 While the technological relevance of this process is not immediately obvious, it does highlight the capabilities that a coupling between two orders with different dynamics can offer in terms of control, to the point where a pulse train can be designed using our model, such that the PLD oscillation follows a given envelope signal almost perfectly.
 
