--- a/papers/Rashba/bib.bib
+++ b/papers/Rashba/bib.bib
@@ -3208,4 +3208,20 @@ title = {{"special points for Brillouin-zone integrations"-a reply}},
 volume = {16},
 year = {1977}
 }
+@article{Thonhauser2011,
+abstract = {In this review article, we survey the relatively new theory of orbital magnetization in solids-often referred to as the "modern theory of orbital magnetization"-and its applications. Surprisingly, while the calculation of the orbital magnetization in finite systems such as atoms and molecules is straight forward, in extended systems or solids it has long eluded calculations owing to the fact that the position operator is ill-defined in such a context. Approaches that overcome this problem were first developed in 2005 and in the first part of this review we present the main ideas reaching from a Wannier function approach to semi-classical and finite-temperature formalisms. In the second part, we describe practical aspects of calculating the orbital magnetization, such as taking k-space derivatives, a formalism for pseudopotentials, a single k-point derivation, a Wannier interpolation scheme, and DFT specific aspects. We then show results of recent calculations on Fe, Co, and Ni. In the last part of this review, we focus on direct applications of the orbital magnetization. In particular, we will review how properties such as the nuclear magnetic resonance shielding tensor and the electron paramagnetic resonance g-tensor can elegantly be calculated in terms of a derivative of the orbital magnetization.},
+archivePrefix = {arXiv},
+arxivId = {1105.5251},
+author = {Thonhauser, T},
+doi = {10.1142/S0217979211058912},
+eprint = {1105.5251},
+file = {:home/ponet/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Thonhauser - 2011 - Theory of orbital magnetization in solids.pdf:pdf},
+isbn = {0217979211058},
+issn = {0217-9792},
+keywords = {berry phase,bloch functions,chern invariant,density functional theory,electron,extended systems,finite,first-principles,magnetism,magnetization,nuclear magnetic resonance,orbital magnetic moment and,paramagnetic resonance,periodic and,pseudopotentials,semi-classical,solids,temperature,wannier functions},
+mendeley-groups = {General Physics/Magnitization},
+title = {{Theory of Orbital Magnetization in Solids}},
+url = {http://arxiv.org/abs/1105.5251{\%}0Ahttp://dx.doi.org/10.1142/S0217979211058912},
+year = {2011}
+}
 
