--- a/papers/Softening/bib.bib
+++ b/papers/Softening/bib.bib
@@ -911,3 +911,203 @@ volume = {91},
 year = {2018}
 }
 
+@article{VonHippel1950,
+abstract = {A summarizing account is given of the research on barium titanate in progress at the Laboratory for Insulation Research at M. I. T. since 1943. The investigations have led to an understanding of the mechanism of ferroelectricity in the titanates and to discoveries such as the piezoelectric effect in the ceramics and the domain structure of the single crystals of BaTiO3. The high dielectric constant, field strength and temperature sensitivity, and piezo-response of the barium titanate dielectrics make them useful for numerous technical applications. {\textcopyright} 1950 The American Physical Society.},
+author = {{Von Hippel}, A.},
+doi = {10.1103/RevModPhys.22.221},
+file = {:home/ponet/Downloads/RevModPhys.22.221.pdf:pdf},
+issn = {00346861},
+journal = {Reviews of Modern Physics},
+number = {3},
+pages = {221--237},
+title = {{Ferroelectricity, domain structure, and phase transitions of barium titanate}},
+volume = {22},
+year = {1950}
+}
+
+@article{Mason1948,
+abstract = {In order to explain the properties of a barium titanate single domain crystal, a previous theory of the ferroelectric effect in rochelle salt has been extended to the three-dimensional structure of barium titanate. This involves six equilibrium positions and results in significant differences from the single bond type of structure of rochelle salt. The theoretical features considered are a calculation of the spontaneous polarization as a function of temperature, the dielectric constants along the a=y and c=z axes as a function of temperature, the relaxation of the dielectric constant at high frequencies, and the hysteresis loops. All of these features are explained by the three-dimensional model considered here. {\textcopyright} 1948 The American Physical Society.},
+author = {Mason, W. P. and Matthias, B. T.},
+doi = {10.1103/PhysRev.74.1622},
+file = {:home/ponet/Downloads/PhysRev.74.1622.pdf:pdf},
+issn = {0031899X},
+journal = {Physical Review},
+number = {11},
+pages = {1622--1636},
+title = {{Theoretical model for explaining the ferroelectric effect in barium titanate}},
+volume = {74},
+year = {1948}
+}
+
+@article{American1963,
+author = {American, The and Society, Ceramic and Technological, The and Straumanis, M E and Ejima, T and Method, Density and Cronemeyer, D C and Properties, Optical and Crystals, Rutile Single and Frederikse, H P R and Hosler, W R and Conductivity, Electrical and Power, Thermoelectric and Greener, H and Whitmore, D H and Earle, M D and Dioxide, Titanium and Hurlen, Tor},
+file = {:home/ponet/Downloads/j.1151-2916.1963.tb19771.x.pdf:pdf},
+number = {9},
+pages = {411--417},
+title = {{American Ceramic Society}},
+volume = {46},
+year = {1963}
+}
+
+@article{Schofield1957,
+author = {{D. Schofield}, R. F. Brown},
+file = {:home/ponet/Downloads/p57-067.pdf:pdf},
+journal = {Canadian Journal of Physics},
+number = {1953},
+pages = {594--607},
+title = {{an Investigation of Some Barium Titanate}},
+volume = {35},
+year = {1957}
+}
+
+@article{Ramakanth2015,
+abstract = {In our earlier studies the BaTiO3 samples were processed at higher temperatures like 1000oC and explained the observed magnetism in it. It is found that the charge transfer effects are playing crucial role in explaining the observed ferromagnetism in it. In the present work the samples were processed at lower temperatures like 650oC-800oC. The carrier densities in these particles were estimated to be ∼ 1019-1020/cm3 range. The band gap is in the range of 2.53eV to 3.2eV. It is observed that magnetization increased with band gap narrowing. The higher band gap narrowed particles exhibited increased magnetization with a higher carrier density of 1.23×1020/cm3 near to the Mott critical density. This hint the exchange interactions between the carriers play a dominant role in deciding the magnetic properties of these particles. The increase in charge carrier density in this undoped BaTiO3 is because of oxygen defects only. The oxygen vacancy will introduce electrons in the system and hence more charge carriers means more oxygen defects in the system and increases the exchange interactions between Ti3+, Ti4+, hence high magnetic moment. The coercivity is increased from 23 nm to 31 nm and then decreased again for higher particle size of 54 nm. These particles do not show photoluminescence property and hence it hints the absence of uniformly distributed distorted [TiO5]-[TiO6] clusters formation and charge transfer between them. Whereas these charge transfer effects are vital in explaining the observed magnetism in high temperature processed samples. Thus the variation of magnetic properties like magnetization, coercivity with band gap narrowing, particle size and charge carrier density reveals the super paramagnetic nature of BaTiO3 nanoparticles. The nonlinear optical coefficients extracted from Z-scan studies suggest that these are potential candidates for optical imaging and signal processing applications.},
+author = {Ramakanth, S. and Hamad, Syed and {Venugopal Rao}, S. and {James Raju}, K. C.},
+doi = {10.1063/1.4921480},
+file = {:home/ponet/Downloads/1.4921480.pdf:pdf},
+issn = {21583226},
+journal = {AIP Advances},
+number = {5},
+title = {{Magnetic and nonlinear optical properties of BaTiO3 nanoparticles}},
+url = {http://dx.doi.org/10.1063/1.4921480},
+volume = {5},
+year = {2015}
+}
+
+@article{Ghosez1995,
+abstract = {Using Variational Density Functional Perturbation Theory, the dielectric and effective charge tensors of cubic Barium Titanate have been calculated as second derivatives of the total energy with respect to electric field and phonon perturbations. Born effective charges of Ti and Oa are surprisingly large. Anomalous contributions reflect how orbital hybridizations are dynamically affected by atomic displacements. This has been examined in the frame of a band by band decomposition. In this description Ba appears more covalent than generally assumed. The LDA greatly overestimates the dielectric constant. This feature can be corrected with a semiempirical “scissors” correction. {\textcopyright} 1995, Taylor {\&} Francis Group, LLC. All rights reserved.},
+author = {Ghosez, Ph and Gonze, X. and Michenaud, J. P.},
+doi = {10.1080/00150199508221833},
+file = {:home/ponet/Downloads/00150199508221833.pdf:pdf},
+isbn = {0015019950},
+issn = {15635112},
+journal = {Ferroelectrics},
+keywords = {BaTiO3,Density functional theory,dielectric constant,effective charges,ferroelectricity,linear response},
+number = {1},
+pages = {113--121},
+title = {{A microscopic study of barium titanate}},
+volume = {164},
+year = {1995}
+}
+
+@article{Stefani2020,
+abstract = {Using scanning probe microscopy, we measure the out-of-plane mechanical response of ferroelectric 180° domain walls and observe that, despite separating domains that are mechanically identical, the walls appear mechanically distinct-softer-compared to the domains. This effect is observed in different ferroelectric materials (LiNbO3, BaTiO3, and PbTiO3) and with different morphologies (from single crystals to thin films), suggesting that the effect is universal. We propose a theoretical framework that explains the domain wall softening and justifies that the effect should be common to all ferroelectrics. The lesson is, therefore, that domain walls are not only functionally different from the domains they separate, but also mechanically distinct.},
+author = {Stefani, Christina and Ponet, Louis and Shapovalov, Konstantin and Chen, Peng and Langenberg, Eric and Schlom, Darrell G. and Artyukhin, Sergey and Stengel, Massimiliano and Domingo, Neus and Catalan, Gustau},
+doi = {10.1103/PhysRevX.10.041001},
+file = {:home/ponet/Downloads/PhysRevX.10.041001(3).pdf:pdf},
+issn = {21603308},
+journal = {Physical Review X},
+keywords = {doi:10.1103/PhysRevX.10.041001 url:https://doi.org/10.1103/PhysRevX.10.041001,materials science},
+number = {4},
+pages = {41001},
+publisher = {American Physical Society},
+title = {{Mechanical Softness of Ferroelectric 180° Domain Walls MECHANICAL SOFTNESS of FERROELECTRIC 180 DEGREE ... STEFANI CHRISTINA et al.}},
+url = {https://doi.org/10.1103/PhysRevX.10.041001},
+volume = {10},
+year = {2020}
+}
+
+@article{Harnagea2001,
+abstract = {Voltage modulated scanning force microscopy in contact mode or piezoresponse scanning force microscopy is now turning into an established technique for imaging ferroelectric domains in ferroelectric thin films. The quantities measured, however, are the amplitude and phase of a locally induced piezoelectric strain, and not the ferroelectric polarization itself. As all ferroelectrics possess piezoelectric properties, the domain structure visualized does correspond to that of the ferroelectric domains whose polarization is partly normal to the film surface, but the amplitude of the signal is actually not proportional to the magnitude of the normal component of the polarization. Likewise, the shear mode of scanning force microscopy allows the imaging of domains with a polarization component in the plane of the film. Methods to relate the amplitude of the piezoresponse signal to the magnitude of the ferroelectric polarization taking into account the anisotropic nature of the piezoelectric coefficients are described and discussed for the most common ferroelectric materials. {\textcopyright} 2001 Taylor {\&} Francis.},
+author = {Harnagea, Catalin and Pignolet, Alain and Alexe, Marin and Hesse, Dietrich},
+doi = {10.1080/10584580108016914},
+file = {:home/ponet/Downloads/10584580108016914.pdf:pdf},
+issn = {10584587},
+journal = {Integrated Ferroelectrics},
+keywords = {Electromechanical characterization,Ferroelectric domains,Piezoelectric tensor,Piezoresponse scanning force microscopy},
+number = {1-4},
+pages = {23--29},
+title = {{Piezoresponse scanning force microscopy: What quantitative information can we really get out of piezoresponse measurements on ferroelectric thin films}},
+volume = {38},
+year = {2001}
+}
+
+@article{Tsuji2005,
+abstract = {Two-dimensional resonance frequency mapping in the ultrasonic atomic force microscopy was applied to the investigation of the ferroelectric domain structure in lead zirconate titanate ceramics. This method can visualize the stiffness anisotropy due to the differently oriented domains. Moreover, the significant stiffness reduction at the ferroelectric domain boundary was discovered. The disorder of the lattice, the ability of the switching of the domain, and the reduction of the piezoelectric stiffening are possible explanations. The implication of this work is the characterization of novel functional materials on nanoscale and the nondestructive evaluation of the microelectromechanical systems and nanotechnology devices. {\textcopyright} 2005 American Institute of Physics.},
+author = {Tsuji, T. and Saito, S. and Fukuda, K. and Yamanaka, K. and Ogiso, H. and Akedo, J. and Kawakami, Y.},
+doi = {10.1063/1.2012537},
+file = {:home/ponet/Downloads/1.2012537.pdf:pdf},
+issn = {00036951},
+journal = {Applied Physics Letters},
+number = {7},
+pages = {2003--2006},
+title = {{Significant stiffness reduction at ferroelectric domain boundary evaluated by ultrasonic atomic force microscopy}},
+volume = {87},
+year = {2005}
+}
+
+@article{Xiao2005,
+abstract = {Commonly used ferroelectric perovskites are also wide-band-gap semiconductors. In such materials, the polarization and the space-charge distribution are intimately coupled, and this Letter studies them simultaneously with no a priori ansatz on either. In particular, we study the structure of domain walls and the depletion layers that form at the metal-ferroelectric interfaces. We find the coupling between polarization and space charges leads to the formation of charge double layers at the 90° domain walls, which, like the depletion layers, are also decorated by defects like oxygen vacancies. In contrast, the 180° domain walls do not interact with the defects or space charges. Implications of these results to domain switching and fatigue in ferroelectric devices are discussed. {\textcopyright} 2005 The American Physical Society.},
+author = {Xiao, Yu and Shenoy, Vivek B. and Bhattacharya, Kaushik},
+doi = {10.1103/PhysRevLett.95.247603},
+file = {:home/ponet/Downloads/PhysRevLett.95.247603.pdf:pdf},
+issn = {10797114},
+journal = {Physical Review Letters},
+number = {24},
+pages = {1--4},
+title = {{Depletion layers and domain walls in semiconducting ferroelectric thin films}},
+volume = {95},
+year = {2005}
+}
+@article{Chen2020,
+abstract = {Ferroelectric domain walls (DWs) are nanoscale topological defects that can be easily tailored to create nanoscale devices. Their excitations, recently discovered to be responsible for GHz DW conductivity, hold promise for faster signal transmission and processing compared to the existing technology. Here we find that DW phonons have unprecedented dispersion going from GHz all the way to THz frequencies, and resulting in a surprisingly broad GHz signature in DW conductivity. Puzzling activation of nominally forbidden DW sliding modes in BiFeO3 is traced back to DW tilting and resulting asymmetry in wall-localized phonons. The obtained phonon spectra and selection rules are used to simulate scanning impedance microscopy, emerging as a powerful probe in nanophononics. The results will guide the experimental discovery of the predicted phonon branches and design of DW-based nanodevices operating in the technologically important frequency range.},
+author = {Chen, Peng and Ponet, Louis and Lai, Keji and Cingolani, Roberto and Artyukhin, Sergey},
+doi = {10.1038/s41524-020-0304-y},
+file = {:home/ponet/Downloads/s41524-020-0304-y.pdf:pdf},
+issn = {20573960},
+journal = {npj Computational Materials},
+number = {1},
+title = {{Domain wall-localized phonons in BiFeO3: spectrum and selection rules}},
+volume = {6},
+year = {2020}
+}
+
+@article{Zhirnov1959,
+abstract = {Transition regions in the 180° and go° boundaries of ferroelectric domains in barium titanate are considered. The equilibrium variation of the spontaneous-polarization vector is deduced from the condition of minimum thermodynamic potential. Explicit expressions are obtained for the thickness and surface energy of the domain boundaries, and numerical estimates are made. The 180° domain boundary in Rochelle salt crystals is discussed.},
+author = {Zhirnov, V. A.},
+file = {:home/ponet/Downloads/e{\_}008{\_}05{\_}0822.pdf:pdf},
+journal = {Soviet physics JETP},
+number = {5},
+pages = {822--825},
+title = {{A Contribution To the Theory of Domain Walls in Ferroelectrics}},
+volume = {35},
+year = {1959}
+}
+@article{L.N.Bulaevskii1963,
+author = {L.N.Bulaevskii},
+file = {:home/ponet/Downloads/e{\_}017{\_}03{\_}0684.pdf:pdf},
+journal = {Soviet Physics Jetp},
+number = {3},
+pages = {684--687},
+title = {{Theory of Non-Uniform Anti Ferromagnetic Spin Chains}},
+volume = {17},
+year = {1963}
+}
+@article{Cao1990,
+author = {Cao, Wenwu and Barsch, Gerhard R and Krumhansl, James A},
+doi = {10.1103/PhysRevB.42.6396},
+file = {:home/ponet/Downloads/PhysRevB.42.6396.pdf:pdf},
+issn = {0163-1829},
+journal = {Physical Review B},
+month = {oct},
+number = {10},
+pages = {6396--6401},
+title = {{Quasi-one-dimensional solutions for domain walls and their constraints in improper ferroelastics}},
+url = {https://link.aps.org/doi/10.1103/PhysRevB.42.6396},
+volume = {42},
+year = {1990}
+}
+@article{Meyer2002,
+abstract = {We have investigated the atomistic structure of the 180° and 90° domain boundaries in the ferroelectric perovskite compound (formula presented) using a first-principles ultrasoft-pseudopotential approach. For each case we have computed the position, thickness and creation energy of the domain walls, and an estimate of the barrier height for their motion has been obtained. We find both kinds of domain walls to be very narrow with a similar width of the order of one to two lattice constants. The energy of the 90° domain wall is calculated to be (formula presented) about a factor of 4 lower than the energy of its 180° counterpart, and only a miniscule barrier for its motion is found. As a surprising feature we detected a small offset of 0.15-0.2 eV in the electrostatic potential across the 90° domain wall. {\textcopyright} 2002 The American Physical Society.},
+author = {Meyer, B. and Vanderbilt, David},
+doi = {10.1103/PhysRevB.65.104111},
+file = {:home/ponet/Downloads/PhysRevB.65.104111.pdf:pdf},
+issn = {1550235X},
+journal = {Physical Review B - Condensed Matter and Materials Physics},
+number = {10},
+pages = {1--11},
+title = {{Ab initio study of ferroelectric domain walls in .(formula presented)}},
+volume = {65},
+year = {2002}
+}
+
