--- a/papers/Thesis.tex
+++ b/papers/Thesis.tex
@@ -19,6 +19,7 @@
 % \usepackage{natbib}
 \usepackage{hyperref}
 \addbibresource{./Introduction/bib.bib}
+\addbibresource{./Theory/bib.bib}
 \addbibresource{./GdMn2O5/bib.bib}
 \addbibresource{./Rashba/bib.bib}
 \addbibresource{./Softening/bib.bib}
